refactor: home screen + submit cubit

--- a/apps/flutter_app/assets/translations/de.json
+++ b/apps/flutter_app/assets/translations/de.json
@@ -40,5 +40,10 @@
             "pdf": "PDF hochladen",
             "camera": "Foto aufnehmen"
         }
+    },
+    "submit": {
+        "choose_file": "Klicker hier um eine Datei auszuwählen.",
+        "send": "Absenden",
+        "analysis_in_progress": "Dein Dokument wird analysiert. Das kann einen Moment dauern."
     }
 }
